[project]
name = "reactor_server"
version = "2.2.0"
description = "reactor http server"
authors = [
    { name = "jackcizon", email = "jack20021213cn@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
